<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.c23ps105.prodify.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_article"
        android:name="com.c23ps105.prodify.ui.blogs.BlogsFragment"
        android:label="@string/title_blogs"
        tools:layout="@layout/fragment_blogs" />

    <fragment
        android:id="@+id/navigation_result"
        android:name="com.c23ps105.prodify.ui.result.ResultFragment"
        android:label="@string/title_result"
        tools:layout="@layout/fragment_result" />
    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.c23ps105.prodify.ui.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />
</navigation>