<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.ProfileFragment">


    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/avatar"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_margin="30dp"
        android:src="@drawable/avatar"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@id/avatar"
        app:layout_constraintStart_toEndOf="@id/avatar"
        app:layout_constraintTop_toTopOf="@id/avatar">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prodify" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_prodify" />
    </LinearLayout>

    <ImageView
        android:id="@+id/ic_bell"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginEnd="30dp"
        android:contentDescription="@string/avatar"
        android:src="@drawable/bell_pin"
        app:layout_constraintBottom_toBottomOf="@+id/avatar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/avatar" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:cardBackgroundColor="@color/black500"
        app:cardCornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="@id/ic_bell"
        app:layout_constraintStart_toStartOf="@id/avatar"
        app:layout_constraintTop_toBottomOf="@id/avatar">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="30dp"
            android:text="@string/discover"
            android:textColor="@color/white_pure" />
    </androidx.cardview.widget.CardView>

    <com.c23ps105.prodify.ui.customview.TextViewCustom
        android:id="@+id/bookmark"
        android:paddingTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bookmark"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="@+id/card"
        app:layout_constraintTop_toBottomOf="@+id/card" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_result"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
        app:layout_constraintEnd_toEndOf="@+id/card"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/card"
        app:layout_constraintTop_toBottomOf="@id/bookmark"
        app:spanCount="2"
        tools:listitem="@layout/item_grid" />
</androidx.constraintlayout.widget.ConstraintLayout>