<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.camera.CameraResultActivity">

    <ImageView
        android:id="@+id/img_camera_result"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:contentDescription="@string/product_image"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="@id/m"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/m"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



    <LinearLayout
        android:id="@+id/result_alternative_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/detail_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.c23ps105.prodify.ui.customview.ButtonCustom
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/one" />

        <com.c23ps105.prodify.ui.customview.ButtonCustom
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/two" />


        <com.c23ps105.prodify.ui.customview.ButtonCustom
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/three" />
    </LinearLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/detail_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/detail_bg"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/m">

        <androidx.cardview.widget.CardView
            android:id="@+id/tv_category_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.c23ps105.prodify.ui.customview.ButtonCustom
                android:id="@+id/tv_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/black400"
                android:padding="20dp"
                android:text="@string/baju_pria"
                android:textColor="@color/offwhite" />
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:id="@+id/ic_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_category_card"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_category_card">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ic_copy"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginEnd="15dp"
                android:src="@drawable/ic_copy" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ic_bookmark"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/bookmark" />
        </LinearLayout>

        <com.c23ps105.prodify.ui.customview.TextViewCustom
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="@+id/tv_category_card"
            app:layout_constraintTop_toBottomOf="@id/tv_category_card"
            android:text="@string/title" />

        <com.c23ps105.prodify.ui.customview.EditTextField
            android:id="@+id/edt_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/pnregular"
            android:hint="@string/tv_category_item"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@+id/ic_container"
            app:layout_constraintStart_toStartOf="@+id/title"
            app:layout_constraintTop_toBottomOf="@id/title" />

        <com.c23ps105.prodify.ui.customview.TextViewCustom
            android:id="@+id/desc_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/description"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="@+id/edt_title"
            app:layout_constraintTop_toBottomOf="@id/edt_title" />

        <com.c23ps105.prodify.ui.customview.EditTextField
            android:id="@+id/edt_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/pnregular"
            android:hint="@string/blogs_desc"
            android:maxLines="3"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/ic_container"
            app:layout_constraintStart_toStartOf="@+id/desc_title"
            app:layout_constraintTop_toBottomOf="@id/desc_title"
            tools:text="Deskripsi Canon EOS 4000D Kit 18-55mm BARU DAN ORIGINAL 100% GARANSI 1 TAHUN" />

        <com.c23ps105.prodify.ui.customview.ButtonCustom
            android:id="@+id/btn_finalize"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/edt_description"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/edt_description"
            app:layout_constraintTop_toBottomOf="@+id/edt_description"
            android:text="@string/btn_finalize_product" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>