<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.home.HomeFragment">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:contentDescription="@string/logo"
            android:src="@drawable/group_36"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/avatar"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="30dp"
            android:src="@drawable/avatar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/imageView" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:contentDescription="@string/avatar"
            android:src="@drawable/bell_pin"
            app:layout_constraintBottom_toBottomOf="@+id/avatar"
            app:layout_constraintEnd_toStartOf="@+id/avatar"
            app:layout_constraintTop_toTopOf="@+id/avatar" />

        <com.c23ps105.prodify.ui.customview.TextViewCustom
            android:id="@+id/tv_user_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/hello_user"
            app:layout_constraintStart_toStartOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <androidx.appcompat.widget.SearchView
            android:id="@+id/search"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/search_bg"
            android:queryHint="Search here..."
            app:iconifiedByDefault="false"
            app:layout_constraintEnd_toEndOf="@+id/avatar"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/tv_user_home"
            app:searchIcon="@drawable/search_alt_duotone_line" />

        <com.c23ps105.prodify.ui.customview.TextViewCustom
            android:id="@+id/tv_history"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/history"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="@+id/avatar"
            app:layout_constraintStart_toStartOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/search" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_home_history"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@id/tv_history"
            tools:listitem="@layout/item_grid" />

        <com.c23ps105.prodify.ui.customview.TextViewCustom
            android:id="@+id/tv_blogs"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:text="@string/blogs_title"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="@+id/avatar"
            app:layout_constraintStart_toStartOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/rv_home_history" />

        <com.c23ps105.prodify.ui.customview.TextViewCustom
            android:id="@+id/tv_desc_blogs"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/blogs_desc"
            android:textSize="11sp"
            app:layout_constraintEnd_toEndOf="@+id/tv_blogs"
            app:layout_constraintStart_toStartOf="@+id/tv_blogs"
            app:layout_constraintTop_toBottomOf="@+id/tv_blogs" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_blogs"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="@+id/avatar"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@id/tv_desc_blogs"
            tools:listitem="@layout/item_linear" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>